--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="content">
 			<div class="intro">
 				<span>Hi there!</span><br/>
-				<span>My name is Ruslan Solovey and I'm Testing Engineer.</span><br/>
+				<span>My name is Ruslan Solovey and I'm a Testing Engineer.</span><br/>
 				<span>Instead of many words look into my CV <a href="https://drive.google.com/file/d/12h-YDZUVwKIwgXFOq2uHdK-5Rt2Vc_0t/view?usp=sharing"><span class="highlight-red">here</span></a>.</span>
 			</div>
 			<table>
