--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 						<img src="CV_Photo.jpg" alt="Ruslan Solovey" title="Ruslan Solovey"/>
 					</td>
 					<td>
-						<span>skype:</span>
+						<span>phone</span>
 					</td>
 					<td>
-						<a href="skype:ruslan_solovey">ruslan_solovey</a>
+						<a href="call:+380677293489">+380677293489</a>
 					</td>
 				</tr>
 				<tr>
