--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<span>phone</span>
 					</td>
 					<td>
-						<a href="call:+380677293489">+380677293489</a>
+						<a href="tel:+380677293489">+38-067-729-34-89</a>
 					</td>
 				</tr>
 				<tr>
