--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<img src="CV_Photo.jpg" alt="Ruslan Solovey" title="Ruslan Solovey"/>
 					</td>
 					<td>
-						<span>phone</span>
+						<span>phone:</span>
 					</td>
 					<td>
 						<a href="tel:+380677293489">+38-067-729-34-89</a>
@@ -40,7 +40,7 @@
 						<span>linkedin:</span>
 					</td>
 					<td>
-						<a href="https://www.linkedin.com/in/ruslan-solovey/">ruslan-solovey</a>
+						<a href="https://www.linkedin.com/in/ruslan-solovey/">ruslan solovey</a>
 					</td>
 
 				</tr>
