--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="intro">
 				<span>Hi there!</span><br/>
 				<span>My name is Ruslan Solovey and I'm a Testing Engineer.</span><br/>
-				<span>Instead of many words look into my CV <a href="https://drive.google.com/file/d/12h-YDZUVwKIwgXFOq2uHdK-5Rt2Vc_0t/view?usp=sharing"><span class="highlight-red">here</span></a>.</span>
+				<span>Instead of many words look into my CV <a href="https://drive.google.com/open?id=1oSILJ6lpbJclE-6hDOCSqBAZmzWCgEcp"><span class="highlight-red">here</span></a>.</span>
 			</div>
 			<table>
 				<tr>
