--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="content">
 			<div class="intro">
 				<span>Hi there!</span><br/>
-				<span>My name is Ruslan Solovey and I'm a Testing Engineer.</span><br/>
+				<span>My name is Ruslan Solovey and I'm a Linkbuilder and Outreach Specialist.</span><br/>
 				<span>Instead of many words look into my CV <a href="https://drive.google.com/open?id=1oSILJ6lpbJclE-6hDOCSqBAZmzWCgEcp"><span class="highlight-red">here</span></a>.</span>
 			</div>
 			<table>
