--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 		<div class="content">
 			<div class="intro">
 				<span>Hi there!</span><br/>
-				<span>My name is Nataly Inederkina and I'm an Account Manager.</span><br/>
-				<span>Instead of many words look into my CV <a href="https://drive.google.com/file/d/1kDpzIDD2jAWhXZRtSrsbUkEenZD4bBFE/view?usp=sharing">here</span></a>.</span>
+				<span>My name is Ruslan Solovei and I'm an experienced Linkbuilder and Outreach Specialist .</span><br/>
+				<span>Instead of many words look into my CV <a href="https://drive.google.com/file/d/1oSILJ6lpbJclE-6hDOCSqBAZmzWCgEcp/view?usp=sharing">here</span></a>.</span>
 			</div>
 			<table>
 				<tr>
 					<td rowspan="3">
-						<img src="CV_Photo.jpg" alt="Nataly Inederkina" title="Nataly Inederkina"/>
+						<img src="CV_Photo.jpg" alt="Ruslan Solovei" title="Ruslan Solovei"/>
 					</td>
 					<td>
 						<span>phone:</span>
 					</td>
 					<td>
-						<a href="tel:+380 67 627 56 64">+380 67 627 56 64</a>
+						<a href="tel:+380677293489">+380677293489</a>
 					</td>
 				</tr>
 				<tr>
@@ -31,7 +31,7 @@
 						<span>email:</span>
 					</td>
 					<td>
-						<a href="mailto:n1inederkina@gmail.com">n1inederkina@gmail.com</a>
+						<a href="mailto:redygreen1@gmail.com">redygreen1@gmail.com</a>
 					</td>
 
 				</tr>
@@ -40,7 +40,7 @@
 						<span>linkedin:</span>
 					</td>
 					<td>
-						<a href="https://www.linkedin.com/in/nataliya-inederkina-457146133/">nataly inederkina</a>
+						<a href="https://www.linkedin.com/in/ruslan-solovey/">ruslan solovei</a>
 					</td>
 
 				</tr>
