--- a/index.html
+++ b/index.html
@@ -16,28 +16,15 @@
 			</div>
 			<table>
 				<tr>
-					<td rowspan="3">
+					<td rowspan="2">
 						<img src="CV_Photo.jpg" alt="Ruslan Solovei" title="Ruslan Solovei"/>
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<span>email:</span>
+						<span>email: <a href="mailto:redygreen1@gmail.com">redygreen1@gmail.com</a> <p>linkedin: <a href="https://www.linkedin.com/in/ruslan-solovey/">ruslan solovei</a></span>
 					</td>
-					<td>
-						<a href="mailto:redygreen1@gmail.com">redygreen1@gmail.com</a>
-					</td>
-
-				</tr>
-				<tr>
-					<td>
-						<span>linkedin:</span>
-					</td>
-					<td>
-						<a href="https://www.linkedin.com/in/ruslan-solovey/">ruslan solovei</a>
-					</td>
-
-				</tr>
+			</tr>
 			</table>
 		</div>
 	</body>
