--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\\\\\\\\\\\\\\\\\\<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -12,7 +12,7 @@
 			<div class="intro">
 				<span>Hi there!</span><br/>
 				<span>My name is Ruslan Solovei and I'm an experienced Linkbuilder and Outreach Specialist .</span><br/>
-				<span>Instead of many words take a look at my CV <a href="https://drive.google.com/file/d/1oSILJ6lpbJclE-6hDOCSqBAZmzWCgEcp/view?usp=sharing">here</span></a>.</span>
+				<span>Instead of many words take a look at my CV <a href="https://drive.google.com/file/d/1ceR1EyGOobmcROXcpMFrItSEduvAZAaq/view?usp=sharing">here</span></a>.</span>
 			</div>
 			<table>
 				<tr>
